--- a/.github/workflows/build_exe.yml
+++ b/.github/workflows/build_exe.yml
@@ -36,7 +36,7 @@ jobs:
       - name: Rename and archive the .exe
         run: |
           mkdir -p release
-          mv dist/main.exe "release/CM Tools.exe"
+          mv dist/main/main.exe "release/CM Tools.exe"
 
       # Upload the renamed .exe file to GitHub Releases
       - name: Create GitHub Release
