--- a/.github/workflows/build_exe.yml
+++ b/.github/workflows/build_exe.yml
@@ -31,6 +31,10 @@ jobs:
         run: |
           pip install pyinstaller
           pyinstaller --onefile main.py
+      
+      # Debug: List files in the dist directory to check if the .exe was created
+      - name: Check if .exe exists in dist folder
+        run: ls -la dist
           
       # Rename the .exe file to Universal Tool.exe and archive it
       - name: Rename and archive the .exe
