--- a/.github/workflows/build_exe.yml
+++ b/.github/workflows/build_exe.yml
@@ -34,7 +34,7 @@ jobs:
       
       # Debug: List files in the dist directory to check if the .exe was created
       - name: Check if .exe exists in dist folder
-        run: ls -la dist
+        run: ls -la dist/main
           
       # Rename the .exe file to Universal Tool.exe and archive it
       - name: Rename and archive the .exe
