--- a/.github/workflows/build_exe.yml
+++ b/.github/workflows/build_exe.yml
@@ -35,13 +35,13 @@ jobs:
       
       # Debug: List files in the dist directory to check if the .exe was created
       - name: Check if .exe exists in dist folder
-        run: ls -la dist/main
+        run: ls -la dist
 
       # Rename the .exe file to Universal Tool.exe and archive it
       - name: Rename and archive the .exe
         run: |
           mkdir -p release
-          mv dist/main/main.exe "release/CM Tools.exe"
+          mv dist/main.exe "release/CM Tools.exe"
 
       # Upload the renamed .exe file to GitHub Releases
       - name: Create GitHub Release
