added install pyinstaller in workflow

--- a/.github/workflows/build_exe.yml
+++ b/.github/workflows/build_exe.yml
@@ -31,6 +31,7 @@ jobs:
       # Install PyInstaller and create the .exe with the new name
       - name: Build executable
         run: |
+          pip install pyinstaller
           pyinstaller --onefile main.py
       
       # Debug: List files in the dist directory to check if the .exe was created
