--- a/.github/workflows/build_exe.yml
+++ b/.github/workflows/build_exe.yml
@@ -1,53 +1,50 @@
-name: Build and Release Universal Tool
+name: Build and Release EXE
 
-on:
+on: 
   push:
     tags:
       - '*'
-  
-  workflow_dispatch:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
-    
+    runs-on: windows-latest
+
     steps:
-      # Checkout the repository
-      - name: Checkout code
-        uses: actions/checkout@v2
+    - name: Checkout code
+      uses: actions/checkout@v3
 
-      # Set up Python environment
-      - name: Set up Python
-        uses: actions/setup-python@v2
-        with:
-          python-version: '3.9'
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.9.13'
 
-      # Install dependencies
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt  # Install dependencies from requirements.txt
+        pip install pyinstaller
 
-      # Install PyInstaller and create the .exe with the new name
-      - name: Build executable
-        run: |
-          pip install pyinstaller
-          pyinstaller --onefile main.py
-      
-      # Debug: List files in the dist directory to check if the .exe was created
-      - name: Check if .exe exists in dist folder
-        run: ls -la dist
+    - name: Build EXE
+      run: |
+        pyinstaller --onefile main.py  # Change to your main script
 
-      # Rename the .exe file to Universal Tool.exe and archive it
-      - name: Rename and archive the .exe
-        run: |
-          mkdir -p release
-          mv dist/main.exe "release/CM Tools.exe"
+    - name: Create Release
+      id: create_release
+      uses: actions/create-release@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        tag_name: ${{ github.ref }}
+        release_name: Release ${{ github.ref }}
+        draft: false
+        prerelease: false
 
-      # Upload the renamed .exe file to GitHub Releases
-      - name: Create GitHub Release
-        uses: softprops/action-gh-release@v1
-        with:
-          files: "release/CM Tools.exe"
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    - name: Upload Release Asset
+      uses: actions/upload-release-asset@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        upload_url: ${{ steps.create_release.outputs.upload_url }}
+        asset_path: dist/main.exe
+        asset_name: main.exe
+        asset_content_type: application/octet-stream
