change file name of .exe file

--- a/.github/workflows/build_exe.yml
+++ b/.github/workflows/build_exe.yml
@@ -26,7 +26,7 @@ jobs:
 
     - name: Build EXE
       run: |
-        pyinstaller --onefile main.py  # Change to your main script
+        pyinstaller --onefile --icon=misc/tool_icon.ico main.py  # Change to your main script
 
     - name: Create Release
       id: create_release
