--- a/.github/workflows/build_exe.yml
+++ b/.github/workflows/build_exe.yml
@@ -1,6 +1,6 @@
-name: Build and Release EXE
+name: Build and Release .exe
 
-on: 
+on:
   push:
     tags:
       - '*'
@@ -8,43 +8,41 @@ on:
 jobs:
   build:
     runs-on: windows-latest
-
+    
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
+      # Checkout the repository
+      - name: Checkout code
+        uses: actions/checkout@v2
 
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: '3.9.13'
+      # Set up Python environment
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: '3.9.13'
 
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt  # Install dependencies from requirements.txt
-        pip install pyinstaller
+      # Install dependencies
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
 
-    - name: Build EXE
-      run: |
-        pyinstaller --onefile --icon=misc/tool_icon.ico main.py  # Change to your main script
+      # Install PyInstaller and create the .exe
+      - name: Build executable
+        run: |
+          pip install pyinstaller
+          pyinstaller --onefile --icon=misc\tool_icon.ico main.py  # Replace with your main script
 
-    - name: Create Release
-      id: create_release
-      uses: actions/create-release@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        tag_name: ${{ github.ref }}
-        release_name: Release ${{ github.ref }}
-        draft: false
-        prerelease: false
+      # Archive the .exe file for GitHub release
+      - name: Archive the .exe
+        run: |
+          mkdir release
+          copy dist\main.exe release\main.exe
+          echo "Creating archive complete"
 
-    - name: Upload Release Asset
-      uses: actions/upload-release-asset@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        upload_url: ${{ env.UPLOAD_URL }}
-        asset_path: dist/main.exe
-        asset_name: main.exe
-        asset_content_type: application/octet-stream
+      # Upload to GitHub Releases
+      - name: Create GitHub Release
+        uses: softprops/action-gh-release@v1
+        with:
+          files: release/main.exe
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
