--- a/.github/workflows/test_slack.yml
+++ b/.github/workflows/test_slack.yml
@@ -6,7 +6,7 @@ on:
 jobs:
   test:
     runs-on: windows-latest
-    
+
     steps:
       # Checkout the repository
       - name: Checkout code
@@ -19,20 +19,25 @@ jobs:
         id: get_tag_details
         shell: pwsh
         run: |
+          # Get the latest tag
           $TAG_NAME = git describe --tags --abbrev=0
-          $COMMENTS = git show -s --format=%B $TAG_NAME
+          
+          # Extract the tag message
+          $TAG_MESSAGE = git tag -l --format="%(contents)" $TAG_NAME
+          
+          # Output the tag name and message as environment variables
           echo "tag_name=$TAG_NAME" >> $env:GITHUB_ENV
-          echo "comments=$COMMENTS" >> $env:GITHUB_ENV
+          echo "tag_message=$TAG_MESSAGE" >> $env:GITHUB_ENV
 
       # Notify Slack
       - name: Notify Slack
         shell: pwsh
         run: |
-          $body = @(
-              @{
-                  body = $env:comments
-                  version = $env:tag_name
-              }
-          ) | ConvertTo-Json
+          # Prepare the payload
+          $body = @{
+              body = $env:tag_message
+              version = $env:tag_name
+          } | ConvertTo-Json -Depth 2
 
+          # Send the notification
           Invoke-RestMethod -Uri ${{ secrets.SLACK_WEBHOOK_URL }} -Method Post -ContentType 'application/json' -Body $body
